# QGIS

debian/: qgis.install
linux/: CMakeLists.txt  org.qgis.qgis.appdata.xml
rpm/: qgis.spec.template
